<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:text="@string/app_title"
        style="@style/PortfolioTitle"/>

    <Button
        android:id="@+id/appSpotify"
        android:layout_below="@id/appTitle"
        android:text="@string/app_spotify"
        style="@style/PortfolioBtn"
        android:onClick="buttonClicked"/>

    <Button
        android:id="@+id/appScores"
        android:layout_below="@id/appSpotify"
        android:text="@string/app_scores"
        style="@style/PortfolioBtn"
        android:onClick="buttonClicked"/>

    <Button
        android:id="@+id/appLibrary"
        android:layout_below="@id/appScores"
        android:text="@string/app_library"
        style="@style/PortfolioBtn"
        android:onClick="buttonClicked"/>

    <Button
        android:id="@+id/appBuildItBigger"
        android:layout_below="@id/appLibrary"
        android:text="@string/app_builditbigger"
        style="@style/PortfolioBtn"
        android:onClick="buttonClicked"/>

    <Button
        android:id="@+id/appXYZ"
        android:layout_below="@id/appBuildItBigger"
        android:text="@string/app_xyzreader"
        style="@style/PortfolioBtn"
        android:onClick="buttonClicked"/>

    <Button
        android:id="@+id/appCapstone"
        android:layout_below="@id/appXYZ"
        android:text="@string/app_capstone"
        style="@style/PortfolioBtnHighlighted"
        android:onClick="buttonClicked"/>

</RelativeLayout>
